Update index and style files

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
       - La frase comienza con mayúscula y no termina en punto.
       - La frase comienza con un verbo. El verbe debe ser la acción que se realizó en ese commit.
 
+      Pasos para realizar un repositorio.
+
+      1 - git init => en la carpeta madre para inicializar el repositorio
+
+      2 - git add . => una vez que hayan concluido los cambios añadir estos al commit
+
+      3 - git commit -m "Mensaje de commit" => se guarda el commit con un nombre
+
+      4 - git remote add origin "URL del repositorio" => es requerido solo la primera vez
+
+      5 - git push => envia el commit al repositorio remoto
+
      -->
 
     <h1>Titulo de prueba</h1>
@@ -33,5 +45,6 @@
       <li>Contact</li>
       <li>Projects</li>
     </ul>
+    <h4>Nuevo titulo de commit 2</h4>
   </body>
 </html>
